--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <nav>
             <div class="logo">
-                <h1>Search Movie's</h1>
+                <h1>Find Movie's</h1>
             </div>
             <div class="searchbar">
                 <input type="text" placeholder="Search Here" id="searchinput">
@@ -18,12 +18,9 @@
             </div>
         </nav>
         <div class="card">
-            
-
+            <!-- Movie results will be inserted here -->
         </div>
     </div>
-
-
 
     <script src="search.js"></script>
 </body>
