--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Search App</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="/public/germs_1837854.png" />
+  </head>
+  <body>
     <div class="container">
-        <nav>
-            <div class="logo">
-                <h1>Find Movie's</h1>
-            </div>
-            <div class="searchbar">
-                <input type="text" placeholder="Search Here" id="searchinput">
-                <button id="searchbtn">Search</button>
-            </div>
-        </nav>
-        <div class="card">
-            <!-- Movie results will be inserted here -->
+      <nav>
+        <div class="logo">
+          <h1>Find Movie's</h1>
         </div>
+        <div class="searchbar">
+          <input type="text" placeholder="Search Here" id="searchinput" />
+          <button id="searchbtn">Search</button>
+        </div>
+      </nav>
+      <div class="card">
+        <!-- Movie results will be inserted here -->
+      </div>
     </div>
 
     <script src="search.js"></script>
-</body>
+  </body>
 </html>
