--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Search App</title>
+
+    <link rel="icon" type="image/png" href="/public/faviconImage.png" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="/public/germs_1837854.png" />
   </head>
+
   <body>
     <div class="container">
       <nav>
@@ -18,11 +20,13 @@
           <button id="searchbtn">Search</button>
         </div>
       </nav>
+
       <div class="card">
         <!-- Movie results will be inserted here -->
       </div>
     </div>
 
+    <!-- Link to JS -->
     <script src="search.js"></script>
   </body>
 </html>
