update favicon path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Search App</title>
 
-    <link rel="icon" type="image/png" href="./faviconImage.png" />
+    <link rel="icon" type="image/png" href="/Search-Movie/faviconImage.png" />
+
     <link rel="stylesheet" href="style.css" />
   </head>
 
