--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Search App</title>
 
-    <link
-      rel="icon"
-      type="image/png"
-      href="/Search-Movie/public/faviconImage.png"
-    />
+    <link rel="icon" type="image/png" href="images/faviconImage.png" />
 
     <link rel="stylesheet" href="style.css" />
   </head>
